# vigie

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  TODO.md
.github/pages/: index.html
.github/scripts/: gen_mutation_report.sh  inject_flamegraph_links.sh
.github/workflows/: ci.yml
vigie/: Cargo.toml
vigie-core/: Cargo.toml
vigie-core/proptest-regressions/vigie/: vigie.txt
vigie-core/src/: lib.rs
vigie-core/src/builtin/: effect_store.rs  member_store.rs  mod.rs
vigie-core/src/common/: effects.rs  error.rs  member.rs  message.rs  mod.rs
vigie-core/src/core/: member_store.rs  mod.rs  vigie.rs
vigie-core/src/vigie/: builder.rs  member_store.rs  mod.rs  vigie.rs
vigie-core/tests/: main.rs
vigie/src/: builtin_effect_store.rs  builtin_member_store.rs  config.rs  error.rs  event.rs  lib.rs  vigie.rs
vigie/tests/: common.rs  main.rs
